Redesign and paste sanitization

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="msapplication-TileColor" content="#6de033">
     <meta name="theme-color" content="#ffffff">
 </head>
-<body class="bg-green-400 flex items-center justify-center">
+<body class="flex items-center justify-center">
     <h1 class="sr-only">WhatsApp Now</h1>
 
     <div id="app" class="w-full"></div>
