--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>WhatsApp Now</title>
+    <meta name="description" content="Send messages without adding numbers into your address book">
+    <meta name="msapplication-TileColor" content="#6de033">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta property="og:title" content="WhatsApp Now">
+    <meta property="og:description" content="Send messages without adding numbers into your address book">
+    <meta property="og:image" content="https://wha.now.sh/images/card.png">
+    <meta property="og:url" content="https://wha.now.sh">
+    <meta name="twitter:title" content="WhatsApp Now">
+    <meta name="twitter:description" content="Send messages without adding numbers into your address book">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@stevelacey">
+    <meta name="twitter:site" content="@stevelacey">
+    <meta name="twitter:image" content="https://wha.now.sh/images/card.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6de033">
     <link rel="stylesheet" href="/css/app.css">
-    <meta name="msapplication-TileColor" content="#6de033">
-    <meta name="theme-color" content="#ffffff">
 </head>
 <body class="flex items-center justify-center">
     <h1 class="sr-only">WhatsApp Now</h1>
