--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,12 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6de033">
     <link rel="stylesheet" href="/css/app.css">
+    <script>
+        (function(w, f){w[f]=w[f]||function(){(w[f].q=w[f].q||[]).push(arguments)}})(window, 'fathom');
+        fathom('set', 'siteId', 'TJGMM');
+        fathom('trackPageview');
+    </script>
+    <script async id="fathom-script" src="https://steve.ly/analytics/tracker.js"></script>
 </head>
 <body class="flex items-center justify-center">
     <h1 class="sr-only">WhatsApp Now</h1>
