--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="size-full text-[2.25vh] pwa:text-[2.5vh]">
 <head>
-    <meta charset="utf-8">
-    <title>WhatsApp Now</title>
-    <meta name="description" content="Send messages without adding numbers into your address book">
-    <meta name="msapplication-TileColor" content="#6de033">
-    <meta name="theme-color" content="#ffffff">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta property="og:title" content="WhatsApp Now">
-    <meta property="og:description" content="Send messages without adding numbers into your address book">
-    <meta property="og:image" content="https://wha.now.sh/images/card.png">
-    <meta property="og:url" content="https://wha.now.sh">
-    <meta name="twitter:title" content="WhatsApp Now">
-    <meta name="twitter:description" content="Send messages without adding numbers into your address book">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@stevelacey">
-    <meta name="twitter:site" content="@stevelacey">
-    <meta name="twitter:image" content="https://wha.now.sh/images/card.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6de033">
-    <link rel="stylesheet" href="/css/app.css">
-    <script>
-        (function(w, f){w[f]=w[f]||function(){(w[f].q=w[f].q||[]).push(arguments)}})(window, 'fathom');
-        fathom('set', 'siteId', 'TJGMM');
-        fathom('trackPageview');
-    </script>
-    <script async id="fathom-script" src="https://steve.ly/analytics/tracker.js"></script>
+  <meta charset="utf-8">
+  <title>WhatsApp Now</title>
+  <meta name="description" content="Send messages without adding numbers into your address book">
+  <meta name="msapplication-TileColor" content="#6de033">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta property="og:title" content="WhatsApp Now">
+  <meta property="og:description" content="Send messages without adding numbers into your address book">
+  <meta property="og:image" content="https://wha.now.sh/images/card.png">
+  <meta property="og:url" content="https://wha.now.sh">
+  <meta name="twitter:title" content="WhatsApp Now">
+  <meta name="twitter:description" content="Send messages without adding numbers into your address book">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:creator" content="@stevelacey">
+  <meta name="twitter:site" content="@stevelacey">
+  <meta name="twitter:image" content="https://wha.now.sh/images/card.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="dns-prefetch" href="//images.unsplash.com">
+  <link rel="dns-prefetch" href="//secure.geonames.org">
+  <link rel="dns-prefetch" href="//steve.ly">
+  <link rel="icon" href="/favicon-16x16.png" type="image/png" sizes="16x16">
+  <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6de033">
+  <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
+  <link rel="preconnect" href="https://secure.geonames.org" crossorigin>
+  <link rel="preconnect" href="https://steve.ly" crossorigin>
+  <link rel="stylesheet" href="/css/app.css">
+  <script>
+    (function(w, f){w[f]=w[f]||function(){(w[f].q=w[f].q||[]).push(arguments)}})(window, 'fathom');
+    fathom('set', 'siteId', 'TJGMM');
+    fathom('trackPageview');
+  </script>
+  <script async id="fathom-script" src="https://steve.ly/analytics/tracker.js"></script>
 </head>
-<body class="flex items-center justify-center">
-    <h1 class="sr-only">WhatsApp Now</h1>
+<body class="
+  bg-green-700 text-white
+  flex items-center justify-center min-w-64 size-full pb-14
+  overflow-hidden select-none touch-none
+">
+  <h1 class="sr-only">WhatsApp Now</h1>
 
-    <div id="app" class="w-full"></div>
+  <img
+    src="https://images.unsplash.com/photo-1554481923-a6918bd997bc?fit=crop&w=200&q=0"
+    class="absolute inset-0 blur-md object-cover scale-125 size-full"
+  >
 
-    <script src="/js/app.js"></script>
+  <div id="app" class="relative"></div>
+
+  <script src="/js/app.js"></script>
 </body>
 </html>
