Switch background to gradient

--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,12 @@
   <meta name="twitter:site" content="@stevelacey">
   <meta name="twitter:image" content="https://wha.now.sh/images/card.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="dns-prefetch" href="//images.unsplash.com">
   <link rel="dns-prefetch" href="//secure.geonames.org">
   <link rel="dns-prefetch" href="//steve.ly">
   <link rel="icon" href="/favicon-16x16.png" type="image/png" sizes="16x16">
   <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6de033">
-  <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
   <link rel="preconnect" href="https://secure.geonames.org" crossorigin>
   <link rel="preconnect" href="https://steve.ly" crossorigin>
   <link rel="stylesheet" href="/css/app.css">
@@ -37,18 +35,13 @@
   <script async id="fathom-script" src="https://steve.ly/analytics/tracker.js"></script>
 </head>
 <body class="
-  bg-green-700 text-white
+  bg-rainbow bg-[length:300%] animate-background text-white
   flex items-center justify-center min-w-64 size-full pb-14
   overflow-hidden select-none touch-none
 ">
   <h1 class="sr-only">WhatsApp Now</h1>
 
-  <img
-    src="https://images.unsplash.com/photo-1554481923-a6918bd997bc?fit=crop&w=200&q=0"
-    class="absolute inset-0 blur-md object-cover scale-125 size-full"
-  >
-
-  <div id="app" class="relative"></div>
+  <div id="app"></div>
 
   <script src="/js/app.js"></script>
 </body>
