Swap out fathom for umami

--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,7 @@
   <link rel="preconnect" href="https://secure.geonames.org" crossorigin>
   <link rel="preconnect" href="https://steve.ly" crossorigin>
   <link rel="stylesheet" href="/css/app.css">
-  <script>
-    (function(w, f){w[f]=w[f]||function(){(w[f].q=w[f].q||[]).push(arguments)}})(window, 'fathom');
-    fathom('set', 'siteId', 'TJGMM');
-    fathom('trackPageview');
-  </script>
-  <script async id="fathom-script" src="https://steve.ly/analytics/tracker.js"></script>
+  <script async src="https://steve.ly/analytics/script.js" data-website-id="dcfef91c-2707-40da-9d8a-200c3b374ce9"></script>
 </head>
 <body class="
   bg-rainbow bg-[length:300%] animate-background text-white
